# boost.simd_playground

./: .gitignore  CMakeLists.txt  README.md  TODO  TODO.md  _config.yml  build  build.sh  config  index.md  lol.txt  prepare  prepare.sh
analysis/: CMakeLists.txt  README.md  build
bench/: .gitignore  CMakeLists.txt  RAEDME.md  README.md  build  run_benches  run_benches.sh
bench/src/: main.cpp
bench/src/algebra/: dot.hpp
bench/src/dot/: select.hpp
bench/src/dot/jpenuchot/: def.hpp  select.hpp
bench/src/dot/mkl/: def.hpp  select.hpp
bench/src/dot/openblas/: def.hpp  select.hpp
bench/src/dot/playground/: def.hpp  select.hpp
bench/src/graphics/: dumb_versions.hpp  select.hpp
bench/src/graphics/batch/: def.hpp  select.hpp
bench/src/graphics/matmat/: def.hpp  select.hpp
bench/src/graphics/matvec/: def.hpp  select.hpp
bench/src/graphics/playground/matvec/: def.hpp
bench/src/graphics/playground/vecmat/: def.hpp
bench/src/graphics/vecmat/: def.hpp  select.hpp
bench/src/jpenuchot/algebra/: dot.hpp  dot_def.hpp  dot_select.hpp
bench/src/misc/: containers.hpp
bench/tools/: json_to_csv.js  json_to_plot.js  plot.gnu
benches/: index.md
benches/content/: bench_avx_double_output.txt  bench_avx_double_report.json  bench_avx_float_output.txt  bench_avx_float_report.json  bench_sse4.2_double_output.txt  bench_sse4.2_double_report.json  bench_sse4.2_float_output.txt  bench_sse4.2_float_report.json
compare/: CMakeLists.txt  README.md  build
compare/src1/: main.cpp
compare/src2/: main.cpp
compare/src__1/: main.cpp
compare/src__2/: main.cpp
compare/src__dumb/: main.cpp
examples/compare/: README.md
examples/compare/src__batch_glm/: main.cpp
examples/compare/src__batch_simd/: main.cpp
examples/compare/src__loadmat3/: main.cpp
examples/compare/src__loadvec3/: main.cpp
examples/compare/src__matmat44/: main.cpp
examples/compare/src__matvec44/: main.cpp
examples/compare/src__transpose4/: main.cpp
examples/compare/src__vecmat44/: main.cpp
include/: pvector.hpp
include/algebra/: dot.hpp
include/jpenuchot/: parray.hpp  pmat.hpp  pvector.hpp
include/jpenuchot/algebra/: dot.hpp  unsafe_dot.hpp
include/jpenuchot/algebra/dot/: dot.hpp  dot_dumb.hpp  dot_simd.hpp  dot_simd_inner.hpp  dot_simd_unrolls.hpp  dot_simd_versions.hpp
include/playground/: pmat.hpp  pmat_c.hpp  pmat_r.hpp  pvector.hpp
include/playground/algebra/dot/: dot.hpp  dot_dumb.hpp  dot_simd.hpp  dot_simd_inner.hpp  dot_simd_unrolls.hpp  dot_simd_versions.hpp  unsafe_dot.hpp
include/playground/algebra/gemv/: gemv.hpp  gemv_dumb.hpp  gemv_simd.hpp
include/playground/graphics/: mat3x3.hpp  mat4x4.hpp  types.hpp  vec3.hpp  vec4.hpp  vecarray.hpp
include/playground/graphics/algebra/: dot.hpp  gemm.hpp  matmat.hpp  matvec.hpp  vecmat.hpp
include/playground/graphics/algebra/batch/: matmat.hpp  matvec.hpp
include/playground/graphics/helper/: transpose.hpp
include/playground/graphics/memory/: load.hpp  load_mat3.hpp  load_vec3.hpp
include/playground/helpers/: padding.hpp
include/playground/types/: parray.hpp  pmat_c.hpp  pmat_r.hpp
inspection/: index.md
src/: main.cpp
